feat: added a query filter to the job application handler, now we can filter by status ids and company ids
